deploy/jenkins/jenkins-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-headless
  namespace: devops
spec:
  selector:
    app: jenkins
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
