deploy/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: devops
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30008
